--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
     "anymatch": "^3.1.2",
+    "aos": "^3.0.0-beta.6",
     "arg": "^5.0.2",
     "array-flatten": "^2.1.2",
     "array-union": "^2.1.0",
